<resources>
    <string name="app_name">见隅</string>
</resources>
